objects/n2de__Distribution_reject_log__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Approve the rejection of this assignment</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Assigned_object_id__c</fullName>
        <externalId>true</externalId>
        <label>Assigned object id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Request_datetime__c</fullName>
        <label>Request datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requested_reject_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Review_datetime__c</fullName>
        <label>Review datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Reviewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_reject_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>n2de__Team__c</referenceTo>
        <relationshipLabel>Distribution reject logs</relationshipLabel>
        <relationshipName>Distribution_reject_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distribution reject log</label>
    <listViews>
        <fullName>Nolan_Daigle_Distribution_reject_log</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution reject logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>